  <<../user-guide/index.adoc#writing-tests-built-in-extensions-AutoClose, User Guide>> for
  details.
* `@TempDir` now suppresses `NoSuchFileException` when attempting to delete files that may
  have been already deleted by another thread or process.
* `JAVA_23` has been added to the `JRE` enum for use with JRE-based execution conditions.
* New <<../user-guide/index.adoc#writing-tests-exceptions, Exception Handling>>
  documentation in the User Guide.
* Improved documentation for <<../user-guide/index.adoc#writing-tests-assumptions,
  Assumptions>> in the User Guide.
* Improved Javadoc for `assertThrows()` and `assertThrowsExactly()` to make it clear that
  the supplied message is not the _expected message_ of the thrown exception.
* Improved documentation for semantics of a disabled test regarding class-level lifecycle
  methods and callbacks.
* `@..Source` annotations for parameterized tests can now be used as repeatable
  annotations. See the
  <<../user-guide/index.adoc#writing-tests-parameterized-repeatable-sources, User Guide>>
  for details.
* New `argumentSet()` factory method for providing a custom name for an entire set of
  arguments for a `@ParameterizedTest`. See the
  <<../user-guide/index.adoc#writing-tests-parameterized-tests-display-names, User Guide>>
  for details.
* `JAVA_24` has been added to the `JRE` enum for use with JRE-based execution conditions.
* New `assertInstanceOf` methods added for Kotlin following up with similar Java
  `assertInstanceOf` methods introduced in `5.8` version.
* New generators in `DynamicTest` that take a `Stream`/`Iterator` of `Named<Executable>`
  along with a convenient `NamedExecutable` interface that can simplify writing dynamic
  tests, in particular in recent versions of Java that support records.
* `@TempDir` now fails fast in case `TempDirFactory::createTempDirectory` returns
  `null`, a file, or a symbolic link to a file.


[[release-notes-5.11.0-junit-vintage]]
=== JUnit Vintage

No changes.