@@ -183,6 +183,9 @@ on GitHub.
   tests, in particular in recent versions of Java that support records.
 * `@TempDir` now fails fast in case `TempDirFactory::createTempDirectory` returns
   `null`, a file, or a symbolic link to a file.
+* `@TempDir` now fails fast in case the annotated target is of type `File` and
+  `TempDirFactory::createTempDirectory` returns a `Path` that does not belong to the
+  default file system.
 
 
 [[release-notes-5.11.0-junit-vintage]]
